[gd_scene load_steps=9 format=3 uid="uid://43asvjsglnhk"]

[ext_resource type="Script" path="res://character and weapons/bulletBase/explosive_base_script.gd" id="1_ydh5y"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_fdgpk"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_khyy6"]
height = 0.15
radius = 0.025

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_0vnhb"]
albedo_color = Color(1, 0.917647, 0.0313726, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_8rn7v"]
material = SubResource("StandardMaterial3D_0vnhb")
top_radius = 0.012
bottom_radius = 0.024
height = 0.123
radial_segments = 12
rings = 1

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_xqyos"]
margin = 0.024
radius = 0.025
height = 0.138

[sub_resource type="SphereShape3D" id="SphereShape3D_dv3pt"]
radius = 0.06

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_0wy4b"]
properties/0/path = NodePath(".:linear_velocity")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:angular_velocity")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath(".:position")
properties/2/spawn = true
properties/2/replication_mode = 1
properties/3/path = NodePath(".:rotation")
properties/3/spawn = true
properties/3/replication_mode = 1

[node name="RigidBody3D" type="RigidBody3D"]
collision_layer = 0
collision_mask = 926
input_ray_pickable = false
mass = 5.0
physics_material_override = SubResource("PhysicsMaterial_fdgpk")
gravity_scale = 0.0
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("1_ydh5y")
bullet = true
explodes = false
projectile_speed = 20.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(0.6, 0, 0, 0, -2.62268e-08, -0.6, 0, 0.6, -2.62268e-08, 0, 0, 0)
shape = SubResource("CylinderShape3D_khyy6")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0)
mesh = SubResource("CylinderMesh_8rn7v")

[node name="contact explosion" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
collision_layer = 0
collision_mask = 960

[node name="CollisionShape3D" type="CollisionShape3D" parent="contact explosion"]
shape = SubResource("CapsuleShape3D_xqyos")

[node name="explosionRadius" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 896
input_ray_pickable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="explosionRadius"]
shape = SubResource("SphereShape3D_dv3pt")

[node name="fuse_timer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[node name="timeout_timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_0wy4b")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="area_entered" from="contact explosion" to="." method="_on_contact_explosion_area_entered"]
[connection signal="timeout" from="fuse_timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="timeout_timer" to="." method="_on_timeout_timer_timeout"]
